globus-xio (5.16-1+gt6.@distro@) @distro@; urgency=low

  * Fix crash in error handling in http driver

 -- Globus Toolkit <support@globus.org>  Wed, 24 May 2017 16:16:31 -0400

globus-xio (5.15-1+gt6.@distro@) @distro@; urgency=low

  * Don't rely on globus_error_put(NULL) to be GLOBUS_SUCCESS

 -- Globus Toolkit <support@globus.org>  Mon, 20 Mar 2017 15:21:01 -0400

globus-xio (5.14-1+gt6.@distro@) @distro@; urgency=low

  * Don't crash when GLOBUS_TCP_PORT_RANGE has the same min and max

 -- Globus Toolkit <support@globus.org>  Fri, 04 Nov 2016 15:05:12 -0500

globus-xio (5.13-1+gt6.@distro@) @distro@; urgency=low

  * Update bug report URL

 -- Globus Toolkit <support@globus.org>  Sat, 20 Aug 2016 09:11:45 -0400

globus-xio (5.12-1+gt6.@distro@) @distro@; urgency=low

  * fix test driver load problem on mac

 -- Globus Toolkit <support@globus.org>  Tue, 05 Apr 2016 16:15:12 -0400

globus-xio (5.11-1+gt6.@distro@) @distro@; urgency=low

  * fix failures connecting to v4mapped addresses on systems that disable dual stack sockets by default

 -- Globus Toolkit <support@globus.org>  Mon, 23 Nov 2015 11:30:46 -0600

globus-xio (5.10-1+gt6.@distro@) @distro@; urgency=low

  * Clarify documentation for timeouts
  * Remove NET+OS fragments

 -- Globus Toolkit <support@globus.org>  Tue, 27 Oct 2015 10:43:12 -0400

globus-xio (5.9-1+gt6.@distro@) @distro@; urgency=low

  * Allow const string option names
  * Fix miscount of string length in GLOBUS_XIO_GET_STRING_OPTIONS
  * Fix some error handling bugs
  * Remove some unused variables

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 14:10:29 -0400

globus-xio (5.8-1+gt6.@distro@) @distro@; urgency=low

  * Check push result in globus_xio_driver_list_to_stack_attr()
  * Add doc for globus_xio_driver_list_to_stack_attr()

 -- Globus Toolkit <support@globus.org>  Tue, 07 Apr 2015 14:37:34 -0400

globus-xio (5.7-1+gt6.@distro@) @distro@; urgency=low

  * more GT-581 tweaks
